// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runner render works for empty sagas 1`] = `""`;

exports[`runner render works for multiple renders 1`] = `
<div>
  second render
</div>
`;

exports[`runner render works for the initial render 1`] = `
<div>
  initial render
</div>
`;
